# obs-isocorder

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  pack-macos.sh  package-macos.sh  verify-build.sh
data/locale/: en-US.ini
src/: audio-recorder.cpp  audio-recorder.hpp  dock.cpp  dock.hpp  isolated-record.cpp  isolated-record.hpp  plugin-main.cpp  recorder-api.cpp  recorder-api.hpp
